--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "el15",
   "version": "0.1.0",
   "private": true,
@@ -6,8 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "katex": "^0.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-latex": "^1.6.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
